<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete_option"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/nav_change_password"
        android:title="@string/action_change_password"
        app:showAsAction="never" />
    <item
        android:id="@+id/nav_exit"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>
