<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/root"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- get username -->
    <LinearLayout
        android:id="@+id/forgot_pass_username_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:orientation="vertical">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/forgot_pass_username_tv"
                    android:text="@string/forgot_password_dialog_username"
                    android:textSize="@dimen/large_text"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/forgot_pass_username_et"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/forgot_pass_username_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_search_red_24dp"
                    android:padding="10dp"
                    android:contentDescription="@string/empty" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/forgot_pass_username_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/forgot_pass_username_error_text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="@dimen/large_text"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <!-- ask security question -->
    <LinearLayout
        android:id="@+id/forgot_pass_question_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/forgot_password_dialog_question_username"
                android:textSize="@dimen/large_text" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:id="@+id/forgot_pass_question_username"
                android:text="Usuario Mendez"
                android:textSize="@dimen/large_text"
                android:gravity="end"
                android:textStyle="italic|bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
            android:layout_marginTop="10dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/forgot_password_dialog_question"
                    android:textSize="@dimen/large_text" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/forgot_pass_question_text"
                    android:text="nombre de mi primer perro"
                    android:textSize="@dimen/large_text"
                    android:textStyle="italic|bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/forgot_password_dialog_question_change"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_refresh_red_24dp"
                    android:contentDescription="@string/empty" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password_dialog_question_new"
                    android:gravity="center"
                    android:lines="2"
                    android:textSize="@dimen/small_text"
                    android:textColor="@color/color_func_colorPrimaryDark"/>

            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/forgot_pass_question_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forgot_password_dialog_question_answer"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/large_text"
                android:text="@string/forgot_password_dialog_question_email"/>

            <TextView
                android:id="@+id/forgot_pass_question_usermail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textSize="@dimen/large_text"
                android:text="algo@algo.com"
                android:textStyle="italic|bold"
                android:gravity="end"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/forgot_pass_question_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/dialog_send" />

        </RelativeLayout>

        <TextView
            android:id="@+id/forgot_pass_question_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/color_func_colorPrimaryDark"
            android:text="@string/forgot_password_dialog_question_error"
            android:textSize="@dimen/large_text"
            android:gravity="center"
            android:visibility="gone"/>
    </LinearLayout>

    <!-- notification message -->
    <LinearLayout
        android:id="@+id/forgot_pass_message_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:id="@+id/forgot_pass_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/xlarge_text"
            android:gravity="center"
            android:text="@string/forgot_password_dialog_success"/>

    </LinearLayout>

    <!-- progress bar -->
    <LinearLayout
        android:id="@+id/forgot_pass_progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
