<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="3dp"
    app:cardUseCompatPadding="true"
    tools:style="@style/CardView">

    <LinearLayout
        android:id="@+id/itemContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/starImageView"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_star_white_24dp"
                android:tint="@color/start_gold" />

            <TextView
                android:id="@+id/titleModuleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/fav_module_text"
                android:textColor="@color/module_title" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/optionsContainerMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drag_here"
                android:textColor="@color/color_func_divider"
                android:gravity="center"
                android:visibility="gone"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp">

                <LinearLayout
                    android:id="@+id/optionsContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    android:contentDescription="@string/favorite_container"/>
            </HorizontalScrollView>

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>