<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/svLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/ivLogin"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/logo_content_description"
                android:layout_marginTop="@dimen/login_img_margin"
                android:layout_marginBottom="20dp"
                android:src="@mipmap/cfmxhor" />

            <LinearLayout
                android:id="@+id/lllLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/tvLoginLocationIcon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_location_off_grey_24dp"/>

                <TextView
                    android:id="@+id/tvLoginLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/msg_no_local"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/medium_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLoginForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/color_func_colorPrimaryDark"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llllLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                </LinearLayout>

                <!-- User Label -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tiLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/user_hint"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <EditText
                        android:id="@+id/inputUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:translationY="3dp"
                        android:singleLine="true"
                        android:imeOptions="actionNext">
                        <requestFocus />
                    </EditText>

                </android.support.design.widget.TextInputLayout>

                <!-- Password Label -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tiPasswordLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="14dp"
                    android:hint="@string/password_hint"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <EditText
                        android:id="@+id/inputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:translationY="3dp"
                        android:singleLine="true"
                        android:imeOptions="actionDone"/>
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/lllllLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <ProgressBar
                        android:id="@+id/loadingProgressBar"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="4dp"
                        android:indeterminateTint="@android:color/white"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:onClick="doLoginOnClick"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:text="@string/login_button_hint"
                        android:visibility="visible" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvForgotPassLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="4dp"
                android:onClick="doForgotPasswordOnClick"
                android:clickable="true"
                android:focusable="true"
                android:padding="4dp"
                android:text="@string/forgot_password_text" />

        </LinearLayout>

    </ScrollView>

    <include
        layout="@layout/ip_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
